# LLM_ETL_UI

./: .env.example  .gitignore  DATA_PROFILING_README.md  Dockerfile  INTEGRATION_SUMMARY.md  LANGGRAPH_INTEGRATION_SUMMARY.json  LANGGRAPH_INTEGRATION_SUMMARY.txt  LANGGRAPH_WORKFLOW_README.md  LICENSE  README.md  config.py  create_integration_summary.py  dataprofiling.py  docker-compose.yml  etl_processor.py  git_push.sh  langgraph_etl_workflow.py  llm_generator.py  llm_ngrock.py  main.py  package-lock.json  purge.sh  pyproject.toml  requirements.txt  sample_sales_data.csv  start.sh
frontend/: package-lock.json  package.json
generated_scripts/: etl_20250802_140121_etl_script.py  etl_20250802_140121_workflow_log.json  etl_20250807_140406_etl_script.py  etl_20250807_140406_workflow_log.json  etl_20250807_224634_etl_script.py  etl_20250807_224634_workflow_log.json  etl_20250808_101103_etl_script.py  etl_20250808_101103_workflow_log.json  etl_20250808_114149_etl_script.py  etl_20250808_114149_workflow_log.json  etl_20250808_115556_etl_script.py  etl_20250808_115556_workflow_log.json  etl_20250808_120009_workflow_log.json  etl_20250808_120345_etl_script.py  etl_20250808_120345_workflow_log.json  etl_20250808_121756_etl_script.py  etl_20250808_121756_workflow_log.json  etl_20250817_170631_etl_script.py  etl_20250817_170631_workflow_log.json  etl_20250817_172901_etl_script.py  etl_20250817_172901_workflow_log.json  etl_20250817_181140_etl_script.py  etl_20250817_181140_workflow_log.json  etl_20250817_181337_etl_script.py  etl_20250817_181337_workflow_log.json
(+4 files in other folders)
